--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,8 +20,6 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": [
-    "src"
-  ],
-  "references": [{ "path": "./tsconfig.node.json"}]
+  "include": ["src", "declaration.d.ts"],
+  "references": [{ "path": "./tsconfig.node.json" }]
 }
