--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,9 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src", "declaration.d.ts"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "include": [
+    "./src",
+    "declaration.d.ts"
+  ],
+  "references": [{ "path": "./tsconfig.node.json"}]
 }
